--- a/src/App.css
+++ b/src/App.css
@@ -47,9 +47,6 @@ a{
 }
 
 
-
-
-
 .navitems--container{
     list-style-type: none;
     display: flex;
@@ -72,6 +69,8 @@ a{
     background-color: #4169EC;
     padding: 20px; /* Add padding around the news item */
     border-radius: 10px; /* Add border-radius to round the edges */
+    gap: 20px;
+    margin-bottom: 0.7rem;
 }
 
 
@@ -106,12 +105,6 @@ a{
     padding: 1em;
     display: flex;
     justify-content: center;
-}
-
-.news--items{
-    display: flex;
-    gap: 20px;
-    margin-bottom: 0.7rem;
 }
 
 
@@ -245,7 +238,40 @@ a{
     transform: scale(1.02);
 }
 
-@media only screen and (max-width: 900px) {
+.news--items:hover{
+    background-color: #3c61d9;
+    transform: scale(1.01);
+    cursor: pointer;
+}
+
+.news--content {
+    display: flex;
+    align-items: center; /* Center horizontally */
+    gap: 10px;
+}
+
+
+
+.nodata{
+    text-align: center;
+    color: #cccccc;
+
+}
+
+.history-error{
+    font-size: 2rem;
+    margin-top: 5rem;
+}
+
+.error-message{
+    display: block;
+    color: #cccccc;
+    font-size: 3rem;
+    font-weight: 700;
+    padding: 70px;
+}
+
+@media only screen and (max-width: 1000px) {
     .news--items {
         display: block;
         background-color: #4169EC;
@@ -253,8 +279,11 @@ a{
         border-radius: 10px; /* Add border-radius to round the edges */
     }
 
+
     .news--img {
-        width: 100%; /* Adjust the image width to fit the container */
+        min-width: 100%;
+        width: 100%;
+        display: flex;
         height: auto; /* Maintain the aspect ratio of the image */
         border-radius: 10px; /* Copy border-radius here to retain rounded edges */
         border: 3px dashed #FFFFFF;
@@ -270,6 +299,21 @@ a{
         height: auto; /* Allow the description to expand naturally */
         overflow-y: visible;
         color: #FFFFFF;
+    }
+
+    .popular--lists{
+        margin-left: 0.5rem;
+    }
+
+    .news--content {
+        display: flex;
+        flex-direction: column; /* Stack content vertically */
+        align-items: center; /* Center horizontally */
+        gap: 10px;
+    }
+
+    .nodata{
+        font-size: 1.7rem
     }
 
 
